// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diffChecker coverage decreased over total treshold should match snapshot 1`] = `
Object {
  "diff": Object {
    "fileA": Object {
      "branches": Object {
        "covered": -1,
        "pct": -50,
        "skipped": 0,
        "total": 0,
      },
      "functions": Object {
        "covered": -1,
        "pct": -50,
        "skipped": 0,
        "total": 0,
      },
      "lines": Object {
        "covered": -1,
        "pct": -50,
        "skipped": 0,
        "total": 0,
      },
      "statements": Object {
        "covered": -1,
        "pct": -50,
        "skipped": 0,
        "total": 0,
      },
    },
    "total": Object {
      "branches": Object {
        "covered": -1,
        "pct": -50,
        "skipped": 0,
        "total": 0,
      },
      "functions": Object {
        "covered": -1,
        "pct": -50,
        "skipped": 0,
        "total": 0,
      },
      "lines": Object {
        "covered": -1,
        "pct": -50,
        "skipped": 0,
        "total": 0,
      },
      "statements": Object {
        "covered": -1,
        "pct": -50,
        "skipped": 0,
        "total": 0,
      },
    },
  },
  "files": Object {
    "fileA": Object {
      "decreased": false,
      "deltas": Object {
        "branches": -50,
        "functions": -50,
        "lines": -50,
        "statements": -50,
      },
      "pcts": Object {
        "branches": 50,
        "functions": 50,
        "lines": 50,
        "statements": 50,
      },
    },
  },
  "regression": false,
  "totals": Object {
    "decreased": false,
    "deltas": Object {
      "branches": -50,
      "functions": -50,
      "lines": -50,
      "statements": -50,
    },
    "pcts": Object {
      "branches": 50,
      "functions": 50,
      "lines": 50,
      "statements": 50,
    },
  },
}
`;

exports[`diffChecker coverage decreased should match snapshot 1`] = `
Object {
  "diff": Object {
    "fileA": Object {
      "branches": Object {
        "covered": -2,
        "pct": -100,
        "skipped": 0,
        "total": 0,
      },
      "functions": Object {
        "covered": -2,
        "pct": -100,
        "skipped": 0,
        "total": 0,
      },
      "lines": Object {
        "covered": -2,
        "pct": -100,
        "skipped": 0,
        "total": 0,
      },
      "statements": Object {
        "covered": -2,
        "pct": -100,
        "skipped": 0,
        "total": 0,
      },
    },
    "total": Object {
      "branches": Object {
        "covered": -2,
        "pct": -100,
        "skipped": 0,
        "total": 0,
      },
      "functions": Object {
        "covered": -2,
        "pct": -100,
        "skipped": 0,
        "total": 0,
      },
      "lines": Object {
        "covered": -2,
        "pct": -100,
        "skipped": 0,
        "total": 0,
      },
      "statements": Object {
        "covered": -2,
        "pct": -100,
        "skipped": 0,
        "total": 0,
      },
    },
  },
  "files": Object {
    "fileA": Object {
      "decreased": true,
      "deltas": Object {
        "branches": -100,
        "functions": -100,
        "lines": -100,
        "statements": -100,
      },
      "pcts": Object {
        "branches": 0,
        "functions": 0,
        "lines": 0,
        "statements": 0,
      },
    },
  },
  "regression": true,
  "totals": Object {
    "decreased": true,
    "deltas": Object {
      "branches": -100,
      "functions": -100,
      "lines": -100,
      "statements": -100,
    },
    "pcts": Object {
      "branches": 0,
      "functions": 0,
      "lines": 0,
      "statements": 0,
    },
  },
}
`;

exports[`diffChecker coverage increased should match snapshot 1`] = `
Object {
  "diff": Object {
    "fileA": Object {
      "branches": Object {
        "covered": 2,
        "pct": 100,
        "skipped": 0,
        "total": 0,
      },
      "functions": Object {
        "covered": 2,
        "pct": 100,
        "skipped": 0,
        "total": 0,
      },
      "lines": Object {
        "covered": 2,
        "pct": 100,
        "skipped": 0,
        "total": 0,
      },
      "statements": Object {
        "covered": 2,
        "pct": 100,
        "skipped": 0,
        "total": 0,
      },
    },
    "total": Object {
      "branches": Object {
        "covered": 2,
        "pct": 100,
        "skipped": 0,
        "total": 0,
      },
      "functions": Object {
        "covered": 2,
        "pct": 100,
        "skipped": 0,
        "total": 0,
      },
      "lines": Object {
        "covered": 2,
        "pct": 100,
        "skipped": 0,
        "total": 0,
      },
      "statements": Object {
        "covered": 2,
        "pct": 100,
        "skipped": 0,
        "total": 0,
      },
    },
  },
  "files": Object {
    "fileA": Object {
      "decreased": false,
      "deltas": Object {
        "branches": 100,
        "functions": 100,
        "lines": 100,
        "statements": 100,
      },
      "pcts": Object {
        "branches": 100,
        "functions": 100,
        "lines": 100,
        "statements": 100,
      },
    },
  },
  "regression": false,
  "totals": Object {
    "decreased": false,
    "deltas": Object {
      "branches": 100,
      "functions": 100,
      "lines": 100,
      "statements": 100,
    },
    "pcts": Object {
      "branches": 100,
      "functions": 100,
      "lines": 100,
      "statements": 100,
    },
  },
}
`;

exports[`diffChecker only check lines should match snapshot 1`] = `
Object {
  "diff": Object {
    "fileA": Object {
      "branches": Object {
        "covered": 0,
        "pct": 0,
        "skipped": 0,
        "total": 0,
      },
      "functions": Object {
        "covered": 0,
        "pct": 0,
        "skipped": 0,
        "total": 0,
      },
      "lines": Object {
        "covered": 1,
        "pct": 50,
        "skipped": 0,
        "total": 0,
      },
      "statements": Object {
        "covered": 0,
        "pct": 0,
        "skipped": 0,
        "total": 0,
      },
    },
    "total": Object {
      "branches": Object {
        "covered": 0,
        "pct": 0,
        "skipped": 0,
        "total": 0,
      },
      "functions": Object {
        "covered": 0,
        "pct": 0,
        "skipped": 0,
        "total": 0,
      },
      "lines": Object {
        "covered": 0,
        "pct": 0,
        "skipped": 0,
        "total": 0,
      },
      "statements": Object {
        "covered": 0,
        "pct": 0,
        "skipped": 0,
        "total": 0,
      },
    },
  },
  "files": Object {
    "fileA": Object {
      "decreased": false,
      "deltas": Object {
        "branches": 0,
        "functions": 0,
        "lines": 50,
        "statements": 0,
      },
      "pcts": Object {
        "branches": 50,
        "functions": 50,
        "lines": 100,
        "statements": 50,
      },
    },
  },
  "regression": false,
  "totals": Object {
    "decreased": false,
    "deltas": Object {
      "branches": 0,
      "functions": 0,
      "lines": 0,
      "statements": 0,
    },
    "pcts": Object {
      "branches": 50,
      "functions": 50,
      "lines": 50,
      "statements": 50,
    },
  },
}
`;

exports[`diffChecker skip non changed files should match snapshot 1`] = `
Object {
  "diff": Object {
    "fileA": Object {
      "branches": Object {
        "covered": 0,
        "pct": 0,
        "skipped": 0,
        "total": 0,
      },
      "functions": Object {
        "covered": 0,
        "pct": 0,
        "skipped": 0,
        "total": 0,
      },
      "lines": Object {
        "covered": 0,
        "pct": 0,
        "skipped": 0,
        "total": 0,
      },
      "statements": Object {
        "covered": 0,
        "pct": 0,
        "skipped": 0,
        "total": 0,
      },
    },
    "total": Object {
      "branches": Object {
        "covered": 0,
        "pct": 0,
        "skipped": 0,
        "total": 0,
      },
      "functions": Object {
        "covered": 0,
        "pct": 0,
        "skipped": 0,
        "total": 0,
      },
      "lines": Object {
        "covered": 0,
        "pct": 0,
        "skipped": 0,
        "total": 0,
      },
      "statements": Object {
        "covered": 0,
        "pct": 0,
        "skipped": 0,
        "total": 0,
      },
    },
  },
  "files": Object {},
  "regression": false,
  "totals": Object {
    "decreased": false,
    "deltas": Object {
      "branches": 0,
      "functions": 0,
      "lines": 0,
      "statements": 0,
    },
    "pcts": Object {
      "branches": 100,
      "functions": 100,
      "lines": 100,
      "statements": 100,
    },
  },
}
`;
